--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "ip": "^1.1.8",
+    "morgan": "^1.10.0",
     "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
